增加了涉及到空间模块的图片操作的权限校验
