# backend/internal/model/request/picture/picture_query_request.go
@@ -20,4 +20,7 @@ type PictureQueryRequest struct {
 	ReviewStatus  int    `json:"reviewStatus,string" swaggertype:"string"` //审核状态
 	ReviewerID    uint64 `json:"reviewerId,string" swaggertype:"string"`   //审核人ID
 	ReviewMessage string `json:"reviewMessage"`
+	//新增空间筛选字段
+	SpaceID       uint64 `json:"spaceId,string" swaggertype:"string"` //空间ID
+	IsNullSpaceID bool   `json:"isNullSpaceId"`                       //是否查询空间ID为空的图片
 }
